--- a/src/localization/static.json
+++ b/src/localization/static.json
@@ -11,5 +11,6 @@
   "location1Longitude": "-4.4268794",
   "location2Latitude": "36.7215296",
   "location2Longitude": "-4.4245817",
-  "email_info": "info@inandoutbelleza.es"
+  "email_info": "info@inandoutbelleza.es",
+  "hostUrl": "https://inandoutbelleza.eu-4.evennode.com"
 }
