--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -105,6 +105,11 @@
       "iconText": "MEDIDOR",
       "windowTitle": "MIDE TU CEJAS",
       "url": "medidor"
+    },
+    "extras": {
+      "iconText": "CONTENIDO EXTRA",
+      "windowTitle": "CONTENIDO EXTRA",
+      "url": "contenido-extra"
     }
   },
   "treatmentsTypes": [
