definitely https://wwww.inandoutbelleza.es

--- a/src/localization/static.json
+++ b/src/localization/static.json
@@ -12,5 +12,5 @@
   "location2Latitude": "36.7215296",
   "location2Longitude": "-4.4245817",
   "email_info": "info@inandoutbelleza.es",
-  "hostUrl": "https://inandoutbelleza.eu-4.evennode.com"
+  "hostUrl": "https://www.inandoutbelleza.es"
 }
