--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -126,7 +126,7 @@
       "windowDescription": "Quieres medir tu cejas ante de pasar en nuestros centros de Málaga? Hatze una foto y luego llamanos ",
       "url": "medidor"
     },
-    "extras": {
+    "blog": {
       "iconText": "CONTENIDO EXTRA",
       "windowTitle": "CONTENIDO EXTRA",
       "windowDescription": "",
