--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -51,7 +51,7 @@
     "news": {
       "iconText": "NOVEDADES",
       "windowTitle": "NOVEDADES",
-      "windowDescription": "Todas as novedades para el mondo della belleza en Málaga",
+      "windowDescription": "Todas las novedades para el mundo de la belleza en Málaga",
       "url": "novedades"
     },
     "promotions": {
