--- a/src/localization/static.json
+++ b/src/localization/static.json
@@ -1,16 +1,26 @@
 {
-  "location1Address": "CALLE SALITRE, 11 - MALAGA",
+  "location1Address": "CALLE SALITRE, 11 - MÁLAGA",
   "location1AddressLabel": "CALLE SALITRE",
   "location1Phone": "951 131 460",
   "location1Mobile": "633 90 91 03",
-  "location2Address": "CALLE COMPANIA, 42 - MALAGA",
+  "location2Address": "CALLE COMPANIA, 42 - MÁLAGA",
   "location2AddressLabel": "CALLE COMPANIA",
   "location2Phone": "951 387 919",
   "location2Mobile": "695 685 291",
+
+  "location3Address": "CALLE PUERTA DE BUENAVENTURA, 4 - MÁLAGA",
+  "location3AddressLabel": "CALLE PUERTA DE BUENAVENTURA",
+  "location3Phone": "951 387 919",
+  "location3Mobile": "695 685 291",
+
+
   "location1Latitude": "36.7137894",
   "location1Longitude": "-4.4268794",
   "location2Latitude": "36.7215296",
   "location2Longitude": "-4.4245817",
+
+  "location3Latitude": "36.723974",
+  "location3Longitude": "-4.4227707",
   "email_info": "info@inandoutbelleza.es",
   "hostUrl": "https://www.inandoutbelleza.es"
 }
