--- a/src/localization/static.json
+++ b/src/localization/static.json
@@ -20,7 +20,7 @@
   "location2Longitude": "-4.4245817",
 
   "location3Latitude": "36.723974",
-  "location3Longitude": "-4.4227707",
+  "location3Longitude": "-4.420582",
   "email_info": "info@inandoutbelleza.es",
   "hostUrl": "https://www.inandoutbelleza.es"
 }
