--- a/src/localization/callUs/es.json
+++ b/src/localization/callUs/es.json
@@ -1,5 +1,7 @@
 {
   "title": "Ponte en contacto con nosotros.",
   "description": "In&Out es tu centro de belleza en Málaga por excelencia, pioneros en la técnica de la <em>depilación con hilo</em> en Málaga y con una larga trayectoria que nos avalan en tratamientos faciales, tratamientos corporales, masajes y organizadores de <em>beauty parties</em>.",
-  "buttonText": "LLAMAR"
+  "buttonText": "LLAMAR",
+  "telephone": "Tel:",
+  "cellular": "Móvil:"
 }
