--- a/src/localization/photoMeasure/es.json
+++ b/src/localization/photoMeasure/es.json
@@ -4,6 +4,6 @@
   "changeCamera": "CAMARA",
   "instruction1": "Pon la cara en la ventana blanca con la linea roja dividiendola por la mitad.",
   "instruction2": "Si quieres pulsa el boton \"CAMARA\" para cambiar entra la camara frontal y detras.",
-  "instruction3": "Pulsa el boton foto.",
+  "instruction3": "Pulsa el boton \"FOTO\".",
   "instruction4": "Si no te gusta la foto puedes repetirla pulsando el boton \"OTRA\""
 }
