fix some descriptions

--- a/src/localization/common/es.json
+++ b/src/localization/common/es.json
@@ -1,6 +1,6 @@
 {
   "createAnAccount": {
-    "title1": "?AUN NO TIENES UNA CUENTA?",
+    "title1": "¿AUN NO TIENES UNA CUENTA?",
     "paragraph1": "Crea tu nueva cuenta para:",
     "item-list1": "RESERVAR TU CITA ONLINE",
     "item-list2": "UTILIZAR EL MEDIDOR DE CEJAS",
