--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -82,7 +82,7 @@
       "iconText": "LLAMANOS",
       "windowTitle": "LLAMANOS",
       "windowDescription": "Quieres cita o quieres una valoración facial, corporal, maquillaje, uñas, hacemos estudios de cejas para depilación y microblading... no dudes en ponerte en contacto con nosotros en los teléfonos 951131460 o 951387919. ",
-      "url": "llmanos"
+      "url": "llamanos"
     },
     "questions": {
       "iconText": "PREGUNTAS",
