--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -19,8 +19,8 @@
       "url": "tratamientos"
     },
     "bonusCards": {
-      "iconText": "TARJETAS",
-      "windowTitle": "TARJETAS",
+      "iconText": "BONOS",
+      "windowTitle": "BONOS",
       "windowDescription": "Salón de belleza, especializado en depilación con hilo y microblading de cejas, ofrece adquirir los tratamientos faciales, corporales, masajes, uñas, maquillaje... que necesite en sesiones sueltas o en un bono el que se beneficia de un precio más económico. ",
       "url": "tarjetas"
     },
