--- a/src/localization/system/es.json
+++ b/src/localization/system/es.json
@@ -153,9 +153,10 @@
     "wrongEmail": "El correo no corresponde a ninguna cuenta.",
     "generic": "Algo no salió bien. Inténtalo de nuevo en breve.",
     "wrongPassword": "TU PASSWORD NO ES CORRECTA.",
-    "inactiveUser": "AUN NO HAS ACTIVADO TU CUENTA. SI NO TE HA LLEGADO EL CORREO PULSA AQUI PARA RECIBIRNE OTRO",
+    "inactiveUser": "<a style='color: white;' onclick='window.navigate(this, event)' href='/es/cuenta/recuperar'>AUN NO HAS ACTIVADO TU CUENTA. SI NO TE HA LLEGADO EL CORREO PULSA AQUI PARA RECIBIRNE OTRO</a>",
     "missingEmail": "añade tu correo",
     "missingName": "añade tu nombre",
+    "missingSurname": "añade tu appelido",
     "missingAddress": "añade tu direccion",
     "missingCity": "añade tu poblacíon",
     "missingCap": "añade tu codigo postal",
@@ -163,6 +164,7 @@
     "missingPassword": "añade una contraseña",
     "malformedEmail": "tu correo no esta en un forma valida",
     "malformedTel": "tu telefono no esta en un forma valida",
+    "privacyNotAccepted": "Por favor acepte el tratamiento de datos",
     "missingUser": "El correo no crresponde a ninguna cuenta",
     "existingUser": "El correo ya tiene una cuenta",
     "camera-forbidden": "Tu dispositivo no permite el acceso a la camara",
